--- a/package.json
+++ b/package.json
@@ -13,5 +13,12 @@
   "dependencies": {
     "express": "^4.11.1",
     "serve-static": "^1.8.1"
+  },
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-browserify": "^3.4.0",
+    "grunt-contrib-coffee": "^0.13.0",
+    "grunt-contrib-uglify": "^0.8.0",
+    "grunt-contrib-watch": "^0.6.1"
   }
 }
