--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "homepage": "https://github.com/dpetker/dataglobe.git",
   "dependencies": {
     "express": "^4.11.1",
+    "react-tween-state": "0.0.4",
     "serve-static": "^1.8.1"
   },
   "devDependencies": {
