--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
   },
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-bower-concat": "^0.4.0",
     "grunt-browserify": "^3.4.0",
     "grunt-coffee-react": "^2.4.1",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-coffee": "^0.13.0",
     "grunt-contrib-uglify": "^0.8.0",
-    "grunt-contrib-watch": "^0.6.1"
+    "grunt-contrib-watch": "^0.6.1",
+    "underscore": "^1.8.2"
   }
 }
