--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "grunt-coffee-react": "^2.4.1",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-coffee": "^0.13.0",
+    "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-uglify": "^0.8.0",
     "grunt-contrib-watch": "^0.6.1",
     "underscore": "^1.8.2"
