--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "underscore": "^1.8.3"
   },
   "devDependencies": {
-    "babelify": "^6.0.2",
     "grunt": "^0.4.5",
+    "grunt-babel": "^5.0.0",
     "grunt-bower-concat": "^0.4.0",
     "grunt-browserify": "^3.4.0",
     "grunt-contrib-clean": "^0.6.0",
