--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "underscore": "^1.8.3"
   },
   "devDependencies": {
+    "babel-eslint": "^4.1.3",
     "babelify": "^6.0.2",
+    "eslint": "^1.5.1",
+    "eslint-config-airbnb": "0.0.8",
+    "eslint-plugin-react": "^3.4.2",
     "grunt": "^0.4.5",
     "grunt-bower-concat": "^0.4.0",
     "grunt-browserify": "^3.4.0",
@@ -25,6 +29,7 @@
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-uglify": "^0.8.0",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-eslint": "^17.2.0",
     "underscore": "^1.8.2"
   }
 }
